fixed about overlap and change text

--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -1,28 +1,28 @@
 .about-container {
-  margin: 1em;
+  margin: 2em;
   display: flex;
   flex-direction: column;
   .profile-container {
     display: inherit;
     flex-direction: row;
     background-color: #0077b652;
+    background-image: url('https://res.cloudinary.com/meegido/image/upload/v1614500906/virginia-profile_nakokv.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 25px;
     border-radius: 25px;
     padding: 1em;
     margin-bottom: 1em;
-    box-shadow: -8px 0px 32px rgba(31, 45, 39, 1);
+    box-shadow: -2px 1px 22px rgba(31, 45, 39, 1);
     .profile {
-      display: flex;
-      flex-direction: column;
-      width: 33.3%;
+      opacity: 0;
   
       .avatar {
-        background-image: url('https://res.cloudinary.com/meegido/image/upload/v1614500906/virginia-profile_nakokv.png');
+        
         mix-blend-mode: darken;
-        width: 260px;
+        width: 100%;
         height: 320px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        border-radius: 25px;
+       
         
       }
       .contact {
