--- a/src/pages/projects/projects.styles.scss
+++ b/src/pages/projects/projects.styles.scss
@@ -1,6 +1,6 @@
 
 .projects-container {
-  margin: 0 2em;
+  margin: 2em;
   .espanlol {
     .header {
       display: grid;
